--- a/styles.css
+++ b/styles.css
@@ -41,11 +41,14 @@ body {
 	color: var(--color-coffee-001);
 	margin: 0 auto;
 	max-width: 130rem;
-   background-color: rgb(54, 52, 50);
+	background-color: rgb(54, 52, 50);
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	flex-wrap: nowrap;
 }
 
 /* _________ Fonts ________ */
-body,
 p {
 	font-size: 0.875rem;
 	max-width: 100vw;
@@ -55,18 +58,21 @@ h1 {
 	font-weight: 700;
 	margin: 0;
 }
-h2 {margin: 20px auto;
-   padding: 30px;
-text-align: center;}
+h2 {
+	margin: 20px auto;
+	padding: 30px;
+	text-align: center;
+}
 @media screen and (min-width: 20rem) {
-	.body,
 	p {
 		font-size: calc(0.875rem + 0.5 * ((100vw - 20rem) / 60));
 	}
 	h1 {
 		font-size: calc(3rem + 2 * ((100vw - 20rem) / 60));
 	}
-	h2, li, button {
+	h2,
+	li,
+	button {
 		font-size: calc(1.2rem + 1.3 * ((100vw - 20rem) / 60));
 	}
 }
@@ -109,16 +115,16 @@ li {
 .header_area {
 	display: flex;
 	height: 100%;
-	justify-content: space-between;
-	align-items: center;
-}
-
-.header-text {
-	margin-bottom: 200px;
+	justify-content: flex-start;
+	align-items: flex-start;
+	margin-left: 10%;
+	margin-top: 10%;
 }
 
 .sub_section {
 	display: flex;
+	flex-wrap: nowrap;
+	flex-direction: column;
 	justify-content: space-around;
 	padding: 80px;
 }
@@ -143,7 +149,7 @@ li {
 	height: 60vw;
 	max-height: 500px;
 	border-radius: 150px;
-   border: 20px solid  rgb(54, 52, 50);;
+	border: 20px solid rgb(54, 52, 50);
 }
 
 .headshot_container {
